fix the build for 1.4 since Integer.valueOf is 1.5
git-svn-id: http://svn.codehaus.org/groovy/trunk@2941 a5544e8c-8a19-0410-ba12-f9af4593a198